# agent-fuzz

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agentfuzz/: __main__.py  config.py  logger.py  project.py
agentfuzz/analyzer/: __init__.py
agentfuzz/analyzer/dynamic/: __init__.py  coverage.py  fuzzer.py
agentfuzz/analyzer/static/: __init__.py  ast.py  tags.py
agentfuzz/analyzer/static/ast/: __init__.py  base.py  clang.py
agentfuzz/generator/: __init__.py
agentfuzz/generator/agent/: base.py
agentfuzz/harness/: __init__.py  agentic.py  generator.py  llm.py  validator.py
agentfuzz/harness/agent/: __init__.py  base.py  logger.py
agentfuzz/harness/mutation/: __init__.py  api.py
agentfuzz/harness/mutation/api/: __init__.py  mutator.py
agentfuzz/harness/prompt/: __init__.py  baseline.py  renderer.py
agentfuzz/language/: __init__.py  supports.py
agentfuzz/language/cpp/: __init__.py  __main__.py  ast.py  compiler.py  config.py  fuzzer.py  lcov.py  supports.py
benchmark/c-ares/: _sanity.c  _sanity.sh  build.sh  config.yaml
benchmark/cjson/: build.sh  config.yaml
benchmark/lcms/: _sanity.c  _sanity.sh  build.sh  config.yaml
benchmark/libaom/: build.sh  config.yaml
benchmark/libpcap/: build.sh  config.yaml  run.sh
benchmark/libtiff/: build.sh  config.yaml
benchmark/libxml2/: build.sh  config.yaml
benchmark/zlib/: _sanity.c  _sanity.sh  build.sh  config.yaml
experiments/: agent.py  baseline.py
